# NativeForge

./: .env.example  .gitignore  AGENTS.md  AGENT_BOOTSTRAP.md  CLAUDE.md  CURSOR_BUILD_BRIEF.md  NOTICE  README.md  audit-output.md  nativeforge-divergence-audit.md  nativeforge-scaffold-execution-plan.md  nativeforge-separate-repo-architecture-decision.md  nf-down  nf-reset  nf-status  nf-up  pyproject.toml
.cursor/rules/: build-loop.mdc
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_empty.py  0002_sprint0_demo_rls.py  0003_nf_tribal_profiles.py  0004_nf_grant_sparks.py  0005_nofo_extraction.py  0006_nf_spark_scores.py  0007_pursuit_pipeline.py  0008_form_packages.py  0009_nf_pursuit_briefs.py  0010_nf_opportunity_sources_discovery.py  0011_nf_opportunity_sources_coverage.py  0012_nf_discovery_intake.py  0013_nf_discovery_review_items.py  0014_discovery_review_assigned_to_text.py  0015_nf_source_check_scheduling.py  0018_nf_operator_action_ledger.py  0019_nf_active_opportunity_sources.py  0020_nf_activation_state.py  0021_nf_opportunity_sources_seed_id.py
context/: guardrails-and-risks.md  operating-principles.md  product-thesis.md
docs/: HITP_COMMIT_GATE.md  demo-isolation.md  m0-demo-operator-checklist.md  m0-demo-readiness-closeout.md  m0-demo-runbook.md  nativeforge-db-context-rules.md
docs/operations/: 13_HANDOFF_LATEST.md  14_HANDOFF_LA_SCALE_FEDERAL.md  15_HANDOFF_SH_SEED_CATALOG_HYGIENE.md  16_HANDOFF_RT_PARTIAL.md  17_HANDOFF_TA_TIER3_FOUNDATION.md  18_HANDOFF_SC_PILOT_RECOGNITION_TIER.md
docs/product/: nativeforge-active-source-activation-authorization-readiness-packet-v1.md  nativeforge-active-source-activation-command-package-v1.md  nativeforge-active-source-activation-execution-plan-authoring-authorization-decision-packet-v1.md  nativeforge-active-source-activation-execution-plan-authoring-authorization-request-packet-v1.md  nativeforge-active-source-activation-execution-plan-authoring-review-packet-v1.md  nativeforge-active-source-activation-execution-plan-review-packet-v1.md  nativeforge-active-source-activation-execution-preparation-decision-packet-v1.md  nativeforge-active-source-activation-execution-preparation-packet-v1.md  nativeforge-active-source-activation-execution-preparation-review-packet-v1.md  nativeforge-active-source-activation-final-human-execution-authorization-packet-v1.md  nativeforge-active-source-activation-final-non-runnable-execution-plan-packet-v1.md  nativeforge-active-source-activation-final-source-activation-authorization-packet-v1.md  (+128 more)
domain/: competitive-landscape.md  drafting-guardrails.md  federal-forms.md  nofo-extraction-schema.md  pricing-and-tiers.md  sovereignty-trust-framework.md
execution/: 01-audit-prompt.md  02-architecture-boundary.md  03-demo-isolation-spec.md
fixtures/: recognition_requirement_regression_snapshot.json
fixtures/matching_readiness/: demo_pairs.json
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
scripts/: apply_seed_catalog_hygiene.py  check_nf_sql_grep.py  check_no_autocommit_process.py  generate_nf_source_seed_2026.py  grants_gov_attachment_recoverable_reaudit.sh  grants_gov_eligibility_completeness_staging_verify.sh  la0_federal_active_count.py  la_scale_federal_staging_verify.sh  m0_demo_down.sh  m0_demo_reset.sh  m0_demo_status.sh  m0_demo_up.sh  m8_close_gate_staging_smoke.sh  nativeforge_backend_coverage.sh  nativeforge_connector_closeout_check.sh  nativeforge_execute_runtime_active_source_creation.py  nativeforge_full_validation.sh  ok_pilot_staging_verify.sh  recognition_requirement_coverage_staging_verify.sh  rt_partial_staging_verify.sh  sc_pilot_staging_verify.sh  seed_catalog_hygiene_report.py  seed_hygiene_staging_verify.sh  seed_m0_demo_data.py  static_extraction_gap_staging_verify.sh  ta_tier3_staging_verify.sh  tier2_state_pilot_staging_verify.sh  tier3_cohort2_staging_verify.sh  tier3_cohort3_staging_verify.sh  validate_demo_isolation.sh
tests/: conftest.py  test_connector_health.py  test_connector_run_manifest.py  test_demo_isolation.py  test_discovery_coverage_gap_ids.py  test_discovery_evidence_pack_formatting.py  test_grants_gov_eligibility_completeness.py  test_grants_gov_shaped_connector.py  test_health.py  test_isolation_routes.py  test_la_scale_federal_activation.py  test_la_scale_honesty_regression.py  test_m0_full_chain_demo.py  test_m8_operator_activation_console.py  test_ok_pilot_matching.py  test_operator_workbench_pure.py  test_opportunity_discovery_route_helpers.py  test_recognition_requirement_coverage_expansion.py  test_rt_matching_profile_provenance.py  test_sc_pilot_recognition_tier_gate.py  test_sh_seed_catalog_hygiene.py  test_sprint0_http.py  test_sprint0_isolation.py  test_sprint0_naming_guard.py  test_sprint0_review_gate.py  test_sprint100_active_source_activation_separate_runtime_implementation_plan_review_packet.py  test_sprint101_active_source_activation_separate_runtime_implementation_plan_decision_packet.py  test_sprint102_active_source_activation_separate_runtime_implementation_final_approval_packet.py  test_sprint103_active_source_activation_separate_runtime_implementation_readiness_packet.py  test_sprint104_active_source_activation_separate_runtime_implementation_release_packet.py  test_sprint105_active_source_activation_operator_release_review_packet.py  test_sprint106_active_source_activation_operator_release_decision_packet.py  test_sprint107_active_source_activation_operator_release_authorization_packet.py  test_sprint108_active_source_activation_operator_release_readiness_packet.py  test_sprint109_active_source_activation_operator_release_packet.py  test_sprint10_discovery_engine.py  test_sprint110_active_source_activation_operator_release_final_approval_packet.py  test_sprint111_active_source_activation_operator_execution_authorization_packet.py  test_sprint112_active_source_activation_operator_execution_packet.py  test_sprint113_active_source_activation_operator_activation_packet.py  (+293 more)
validation/: definition-of-done.md  interview-plan.md  pre-coding-checklist.md
(+576 files in other folders)
