[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nativeforge"
version = "0.1.0"
description = "NativeForge API — sovereignty-first tribal grant pursuit (application package)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "psycopg[binary]>=3.2",
    "pydantic-settings>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "httpx>=0.27",
    "ruff>=0.8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"src/nativeforge/services/opportunity_source_catalog.py" = ["E501"]
"src/nativeforge/services/discovery_evidence_pack_service.py" = ["E501"]
"src/nativeforge/repositories/evidence_pack.py" = ["E501"]
"src/nativeforge/services/source_coverage_plan_service.py" = ["E501"]
"src/nativeforge/services/source_candidate_registry_service.py" = ["E501"]
"src/nativeforge/services/source_onboarding_decision_pack_service.py" = ["E501"]
"src/nativeforge/services/alembic_migration_generation_gate_service.py" = ["E501"]
"src/nativeforge/services/active_source_runtime_creation_execution_service.py" = ["E501"]
"scripts/nativeforge_execute_runtime_active_source_creation.py" = ["E501"]
"tests/test_sprint19_evidence_pack.py" = ["E501"]
"tests/test_sprint62_runtime_active_source_creation_execution_evidence.py" = ["E501"]
"src/nativeforge/services/active_source_activation_preview_execution_plan_draft_packet_service.py" = ["E501"]
"tests/test_sprint75_active_source_activation_preview_execution_plan_draft_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_preview_execution_plan_draft_review_packet_service.py" = ["E501"]
"tests/test_sprint76_active_source_activation_preview_execution_plan_draft_review_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_preview_execution_plan_human_approval_decision_packet_service.py" = ["E501"]
"tests/test_sprint77_active_source_activation_preview_execution_plan_human_approval_decision_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_future_execution_authorization_review_packet_service.py" = ["E501"]
"tests/test_sprint78_active_source_activation_future_execution_authorization_review_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_future_execution_authorization_decision_packet_service.py" = [
    "E501",
]
"tests/test_sprint79_active_source_activation_future_execution_authorization_decision_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_future_non_runnable_execution_planning_packet_service.py" = [
    "E501",
]
"tests/test_sprint80_active_source_activation_future_non_runnable_execution_planning_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_future_execution_plan_finalization_review_packet_service.py" = [
    "E501",
]
"tests/test_sprint81_active_source_activation_future_execution_plan_finalization_review_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_future_execution_plan_finalization_decision_packet_service.py" = [
    "E501",
]
"tests/test_sprint82_active_source_activation_future_execution_plan_finalization_decision_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_final_non_runnable_execution_plan_packet_service.py" = [
    "E501",
]
"tests/test_sprint83_active_source_activation_final_non_runnable_execution_plan_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_final_human_execution_authorization_packet_service.py" = [
    "E501",
]
"tests/test_sprint84_active_source_activation_final_human_execution_authorization_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_execution_preparation_packet_service.py" = [
    "E501",
]
"tests/test_sprint85_active_source_activation_execution_preparation_packet.py" = ["E501"]
"tests/test_sprint37_source_candidate_registry.py" = ["E501"]
"tests/test_sprint38_source_onboarding_decision_pack.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
branch = true
source = ["nativeforge"]
omit = ["*/tests/*"]

[tool.coverage.report]
skip_empty = true
show_missing = true
