[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nativeforge"
version = "0.1.0"
description = "NativeForge API — sovereignty-first tribal grant pursuit (application package)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    "psycopg[binary]>=3.2",
    "pydantic-settings>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "httpx>=0.27",
    "ruff>=0.8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"src/nativeforge/services/opportunity_source_catalog.py" = ["E501"]
"src/nativeforge/services/discovery_evidence_pack_service.py" = ["E501"]
"src/nativeforge/repositories/evidence_pack.py" = ["E501"]
"src/nativeforge/services/source_coverage_plan_service.py" = ["E501"]
"src/nativeforge/services/source_candidate_registry_service.py" = ["E501"]
"src/nativeforge/services/source_onboarding_decision_pack_service.py" = ["E501"]
"src/nativeforge/services/alembic_migration_generation_gate_service.py" = ["E501"]
"src/nativeforge/services/active_source_runtime_creation_execution_service.py" = ["E501"]
"scripts/nativeforge_execute_runtime_active_source_creation.py" = ["E501"]
"tests/test_sprint19_evidence_pack.py" = ["E501"]
"tests/test_sprint62_runtime_active_source_creation_execution_evidence.py" = ["E501"]
"src/nativeforge/services/active_source_activation_preview_execution_plan_draft_packet_service.py" = ["E501"]
"tests/test_sprint75_active_source_activation_preview_execution_plan_draft_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_preview_execution_plan_draft_review_packet_service.py" = ["E501"]
"tests/test_sprint76_active_source_activation_preview_execution_plan_draft_review_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_preview_execution_plan_human_approval_decision_packet_service.py" = ["E501"]
"tests/test_sprint77_active_source_activation_preview_execution_plan_human_approval_decision_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_future_execution_authorization_review_packet_service.py" = ["E501"]
"tests/test_sprint78_active_source_activation_future_execution_authorization_review_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_future_execution_authorization_decision_packet_service.py" = [
    "E501",
]
"tests/test_sprint79_active_source_activation_future_execution_authorization_decision_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_future_non_runnable_execution_planning_packet_service.py" = [
    "E501",
]
"tests/test_sprint80_active_source_activation_future_non_runnable_execution_planning_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_future_execution_plan_finalization_review_packet_service.py" = [
    "E501",
]
"tests/test_sprint81_active_source_activation_future_execution_plan_finalization_review_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_future_execution_plan_finalization_decision_packet_service.py" = [
    "E501",
]
"tests/test_sprint82_active_source_activation_future_execution_plan_finalization_decision_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_final_non_runnable_execution_plan_packet_service.py" = [
    "E501",
]
"tests/test_sprint83_active_source_activation_final_non_runnable_execution_plan_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_final_human_execution_authorization_packet_service.py" = [
    "E501",
]
"tests/test_sprint84_active_source_activation_final_human_execution_authorization_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_execution_preparation_packet_service.py" = [
    "E501",
]
"tests/test_sprint85_active_source_activation_execution_preparation_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_execution_preparation_review_packet_service.py" = [
    "E501",
]
"tests/test_sprint86_active_source_activation_execution_preparation_review_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_execution_preparation_decision_packet_service.py" = [
    "E501",
]
"tests/test_sprint87_active_source_activation_execution_preparation_decision_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_source_activation_readiness_packet_service.py" = [
    "E501",
]
"tests/test_sprint88_active_source_activation_source_activation_readiness_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_source_activation_readiness_review_packet_service.py" = [
    "E501",
]
"tests/test_sprint89_active_source_activation_source_activation_readiness_review_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_source_activation_readiness_decision_packet_service.py" = [
    "E501",
]
"tests/test_sprint90_active_source_activation_source_activation_readiness_decision_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_final_source_activation_authorization_packet_service.py" = [
    "E501",
]
"tests/test_sprint91_active_source_activation_final_source_activation_authorization_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_later_non_runnable_activation_handoff_packet_service.py" = [
    "E501",
]
"tests/test_sprint92_active_source_activation_later_non_runnable_activation_handoff_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_separate_runtime_implementation_design_packet_service.py" = [
    "E501",
]
"tests/test_sprint93_active_source_activation_separate_runtime_implementation_design_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_separate_runtime_implementation_review_packet_service.py" = [
    "E501",
]
"tests/test_sprint94_active_source_activation_separate_runtime_implementation_review_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_separate_runtime_implementation_decision_packet_service.py" = [
    "E501",
]
"tests/test_sprint95_active_source_activation_separate_runtime_implementation_decision_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_separate_runtime_implementation_preparation_packet_service.py" = [
    "E501",
]
"tests/test_sprint96_active_source_activation_separate_runtime_implementation_preparation_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_separate_runtime_implementation_authorization_packet_service.py" = [
    "E501",
]
"tests/test_sprint97_active_source_activation_separate_runtime_implementation_authorization_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_separate_runtime_implementation_handoff_packet_service.py" = [
    "E501",
]
"tests/test_sprint98_active_source_activation_separate_runtime_implementation_handoff_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_separate_runtime_implementation_planning_packet_service.py" = [
    "E501",
]
"tests/test_sprint99_active_source_activation_separate_runtime_implementation_planning_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_separate_runtime_implementation_plan_review_packet_service.py" = [
    "E501",
]
"tests/test_sprint100_active_source_activation_separate_runtime_implementation_plan_review_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_separate_runtime_implementation_plan_decision_packet_service.py" = [
    "E501",
]
"tests/test_sprint101_active_source_activation_separate_runtime_implementation_plan_decision_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_separate_runtime_implementation_final_approval_packet_service.py" = [
    "E501",
]
"tests/test_sprint102_active_source_activation_separate_runtime_implementation_final_approval_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_separate_runtime_implementation_readiness_packet_service.py" = [
    "E501",
]
"tests/test_sprint103_active_source_activation_separate_runtime_implementation_readiness_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_separate_runtime_implementation_release_packet_service.py" = [
    "E501",
]
"tests/test_sprint104_active_source_activation_separate_runtime_implementation_release_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_operator_release_review_packet_service.py" = [
    "E501",
]
"tests/test_sprint105_active_source_activation_operator_release_review_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_operator_release_decision_packet_service.py" = [
    "E501",
]
"tests/test_sprint106_active_source_activation_operator_release_decision_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_operator_release_authorization_packet_service.py" = [
    "E501",
]
"tests/test_sprint107_active_source_activation_operator_release_authorization_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_operator_release_readiness_packet_service.py" = [
    "E501",
]
"tests/test_sprint108_active_source_activation_operator_release_readiness_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_operator_release_packet_service.py" = [
    "E501",
]
"tests/test_sprint109_active_source_activation_operator_release_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_operator_release_final_approval_packet_service.py" = [
    "E501",
]
"tests/test_sprint110_active_source_activation_operator_release_final_approval_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_operator_execution_authorization_packet_service.py" = [
    "E501",
]
"tests/test_sprint111_active_source_activation_operator_execution_authorization_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_operator_execution_packet_service.py" = ["E501"]
"tests/test_sprint112_active_source_activation_operator_execution_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_operator_activation_packet_service.py" = ["E501"]
"tests/test_sprint113_active_source_activation_operator_activation_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_operator_live_source_packet_service.py" = ["E501"]
"tests/test_sprint114_active_source_activation_operator_live_source_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_operator_full_source_packet_service.py" = ["E501"]
"tests/test_sprint115_active_source_activation_operator_full_source_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_operator_final_activation_packet_service.py" = ["E501"]
"tests/test_sprint116_active_source_activation_operator_final_activation_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_m0_demo_build_execution_packet_service.py" = ["E501"]
"tests/test_sprint117_active_source_activation_m0_demo_build_execution_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_m0_organizational_entity_profile_planning_packet_service.py" = [
    "E501",
]
"tests/test_sprint118_active_source_activation_m0_organizational_entity_profile_planning_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_m0_grants_gov_seeded_opportunity_ingestion_interface_planning_packet_service.py" = [
    "E501",
]
"tests/test_sprint119_active_source_activation_m0_grants_gov_seeded_opportunity_ingestion_interface_planning_packet.py" = [
    "E501",
]
"src/nativeforge/services/active_source_activation_m0_tribal_eligibility_mission_fit_scoring_preview_planning_packet_service.py" = [
    "E501",
]
"tests/test_sprint120_active_source_activation_m0_tribal_eligibility_mission_fit_scoring_preview_planning_packet.py" = [
    "E501",
]
"src/nativeforge/services/active_source_activation_m0_nofo_plain_language_summary_preview_planning_packet_service.py" = [
    "E501",
]
"tests/test_sprint121_active_source_activation_m0_nofo_plain_language_summary_preview_planning_packet.py" = [
    "E501",
]
"src/nativeforge/services/active_source_activation_m0_opportunity_scoring_draft_recommendation_planning_packet_service.py" = [
    "E501",
]
"tests/test_sprint122_active_source_activation_m0_opportunity_scoring_draft_recommendation_planning_packet.py" = [
    "E501",
]
"src/nativeforge/services/active_source_activation_m0_pursuit_pipeline_kanban_deadline_tracking_planning_packet_service.py" = [
    "E501",
]
"tests/test_sprint123_active_source_activation_m0_pursuit_pipeline_kanban_deadline_tracking_planning_packet.py" = [
    "E501",
]
"src/nativeforge/services/active_source_activation_m0_sf424_autofill_preview_planning_packet_service.py" = [
    "E501",
]
"tests/test_sprint124_active_source_activation_m0_sf424_autofill_preview_planning_packet.py" = [
    "E501",
]
"src/nativeforge/services/active_source_activation_m0_requirement_extraction_checklist_preview_planning_packet_service.py" = [
    "E501",
]
"tests/test_sprint125_active_source_activation_m0_requirement_extraction_checklist_preview_planning_packet.py" = [
    "E501",
]
"src/nativeforge/services/active_source_activation_m0_data_sovereignty_policy_export_preview_planning_packet_service.py" = [
    "E501",
]
"tests/test_sprint126_active_source_activation_m0_data_sovereignty_policy_export_preview_planning_packet.py" = [
    "E501",
]
"src/nativeforge/services/active_source_activation_m0_human_review_gates_demo_closeout_planning_packet_service.py" = [
    "E501",
]
"tests/test_sprint127_active_source_activation_m0_human_review_gates_demo_closeout_planning_packet.py" = [
    "E501",
]
"src/nativeforge/services/active_source_activation_m0_demo_narrative_buyer_walkthrough_packet_service.py" = [
    "E501",
]
"tests/test_sprint128_active_source_activation_m0_demo_narrative_buyer_walkthrough_packet.py" = [
    "E501",
]
"src/nativeforge/services/active_source_activation_m0_demo_readiness_evidence_pack_operator_checklist_packet_service.py" = [
    "E501",
]
"tests/test_sprint129_active_source_activation_m0_demo_readiness_evidence_pack_operator_checklist_packet.py" = [
    "E501",
]
"src/nativeforge/services/active_source_activation_m0_pilot_transition_m1_readiness_planning_packet_service.py" = [
    "E501",
]
"tests/test_sprint130_active_source_activation_m0_pilot_transition_m1_readiness_planning_packet.py" = [
    "E501",
]
"src/nativeforge/services/active_source_activation_m1_pilot_scope_delivery_boundary_packet_service.py" = [
    "E501",
]
"tests/test_sprint131_active_source_activation_m1_pilot_scope_delivery_boundary_packet.py" = [
    "E501",
]
"src/nativeforge/services/active_source_activation_m1_pilot_implementation_dependency_map_packet_service.py" = [
    "E501",
]
"tests/test_sprint132_active_source_activation_m1_pilot_implementation_dependency_map_packet.py" = [
    "E501",
]
"src/nativeforge/services/active_source_activation_m1_controlled_build_sequencing_human_gate_packet_service.py" = [
    "E501",
]
"tests/test_sprint133_active_source_activation_m1_controlled_build_sequencing_human_gate_packet.py" = [
    "E501",
]
"src/nativeforge/services/active_source_activation_m1_source_ingestion_controlled_build_readiness_packet_service.py" = [
    "E501",
]
"tests/test_sprint134_active_source_activation_m1_source_ingestion_controlled_build_readiness_packet.py" = [
    "E501",
]
"src/nativeforge/services/active_source_activation_m1_nofo_extraction_controlled_build_readiness_packet_service.py" = [
    "E501",
]
"tests/test_sprint135_active_source_activation_m1_nofo_extraction_controlled_build_readiness_packet.py" = [
    "E501",
]
"src/nativeforge/services/active_source_activation_m1_form_package_controlled_build_readiness_packet_service.py" = [
    "E501",
]
"tests/test_sprint136_active_source_activation_m1_form_package_controlled_build_readiness_packet.py" = [
    "E501",
]
"src/nativeforge/services/active_source_activation_m1_human_review_workflow_controlled_build_readiness_packet_service.py" = [
    "E501",
]
"tests/test_sprint137_active_source_activation_m1_human_review_workflow_controlled_build_readiness_packet.py" = [
    "E501",
]
"src/nativeforge/services/active_source_activation_m1_audit_export_sovereignty_controlled_build_readiness_packet_service.py" = [
    "E501",
]
"tests/test_sprint138_active_source_activation_m1_audit_export_sovereignty_controlled_build_readiness_packet.py" = [
    "E501",
]
"src/nativeforge/services/active_source_activation_m1_pilot_operations_support_controlled_build_readiness_packet_service.py" = [
    "E501",
]
"tests/test_sprint139_active_source_activation_m1_pilot_operations_support_controlled_build_readiness_packet.py" = [
    "E501",
]
"src/nativeforge/services/active_source_activation_m1_pilot_demo_to_build_transition_closeout_packet_service.py" = [
    "E501",
]
"tests/test_sprint140_active_source_activation_m1_pilot_demo_to_build_transition_closeout_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_m1_controlled_build_authorization_review_packet_service.py" = [
    "E501",
]
"tests/test_sprint141_active_source_activation_m1_controlled_build_authorization_review_packet.py" = ["E501"]
"src/nativeforge/services/active_source_activation_m1_pilot_implementation_pre_launch_checklist_packet_service.py" = [
    "E501",
]
"tests/test_sprint142_active_source_activation_m1_pilot_implementation_pre_launch_checklist_packet.py" = [
    "E501",
]
"src/nativeforge/services/active_source_activation_m1_pilot_operational_launch_simulation_packet_service.py" = [
    "E501",
]
"tests/test_sprint143_active_source_activation_m1_pilot_operational_launch_simulation_packet.py" = [
    "E501",
]
"tests/test_sprint37_source_candidate_registry.py" = ["E501"]
"tests/test_sprint38_source_onboarding_decision_pack.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
branch = true
source = ["nativeforge"]
omit = ["*/tests/*"]

[tool.coverage.report]
skip_empty = true
show_missing = true
